# EasyReflectometryLib

./: . codecov.yml  .buildinfo  .copier-answers.yml  .coveragerc  .gitignore  AUTHORS.rst  CNAME  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  authors.html  calculators.html  contributing.html  data.html  dictionay.html  experiment.html  genindex.html  index.html  installation.html  interfaces.html  item.html  item_library.html  layer.html  layer_library.html  layers.html  library.html  material.html  material_library.html  materials.html  materials_options.html  measurement.html  model_run.py  modules.html  monolayer.html  monolayer.ipynb  multi_contrast.html  multi_contrast.ipynb  objects.inv  (+18 more)
.doctrees/: authors.doctree  calculators.doctree  contributing.doctree  data.doctree  dictionay.doctree  environment.pickle  experiment.doctree  index.doctree  installation.doctree  interfaces.doctree  item.doctree  item_library.doctree  layer.doctree  layer_library.doctree  layers.doctree  library.doctree  material.doctree  material_library.doctree  materials.doctree  materials_options.doctree  measurement.doctree  modules.doctree  monolayer.doctree  multi_contrast.doctree  repeating.doctree  sample.doctree  simple_fitting.doctree  solvation.doctree  structure.doctree  tutorials.doctree  usage.doctree
.doctrees/api/: api.doctree  data.doctree  model.doctree  sample.doctree
.doctrees/experiment/: experiment.doctree
.doctrees/model/: model.doctree
.doctrees/nbsphinx/: monolayer.ipynb  multi_contrast.ipynb  repeating.ipynb  simple_fitting.ipynb  solvation.ipynb
.doctrees/sample/: assemblies_library.doctree  layer_library.doctree  material_library.doctree  sample.doctree
.doctrees/tutorials/: magnetism.doctree  material_solvated.doctree  monolayer.doctree  multi_contrast.doctree  project.doctree  repeating.doctree  resolution_functions.doctree  simple_fitting.doctree  tutorials.doctree
.github/workflows/: ci.yml  ci_pip.yml  codeql-analysis.yml  documentation-build.yml  documentation-deploy.yml  documentation_build.yml  ossar-analysis.yml  python-ci.yml  python-package.yml  python-publish.yml  release-drafter-verify-pr-labels.yml  release-drafter.yml  test.yml
EasyReflectometry/: __init__.py  data.py  fitting.py  interface.py  main.py  parameter_utils.py  plot.py
EasyReflectometry/calculators/: __init__.py  base.py  bornagain.py  calculator_base.py  factory.py  refl1d.py  refnx.py  wrapper_base.py
EasyReflectometry/experiment/: __init__.py  model.py  model_collection.py  models.py  resolution_functions.py
EasyReflectometry/interfaces/: __init__.py  bornagain.py  interfaceTemplate.py  refl1d.py  refnx.py
EasyReflectometry/measurement/: data.py
EasyReflectometry/sample/: __init__.py  base_core.py  base_element_collection.py  item.py  layer.py  layers.py  material.py  materials.py  sample.py  structure.py
EasyReflectometry/special/: calculations.py  parsing.py
EasyReflectometryLib/: __init__.py  data.py  fitting.py  interface.py  main.py
EasyReflectometryLib/Sample/: materials.py  structure.py
EasyReflectometryLib/experiment/: model.py  models.py
EasyReflectometryLib/interfaces/: __init__.py  bornagain.py  refl1d.py  refnx.py
EasyReflectometryLib/measurement/: data.py
EasyReflectometryLib/sample/: __init__.py  layer.py  layers.py  material.py  materials.py  structure.py
EasyReflectometryLib/special/: calculations.py
_modules/: index.html
_modules/EasyReflectometry/: data.html
_modules/easyreflectometry/: data.html
_sources/: calculators.rst  calculators.rst.txt  data.rst.txt  dictionay.rst  index.rst  index.rst.txt  installation.rst.txt  interfaces.rst.txt  item.rst  item.rst.txt  item_library.rst.txt  layer_library.rst  layer_library.rst.txt  layers.rst.txt  library.rst  material.rst  material_library.rst.txt  materials_options.rst.txt  measurement.rst.txt  modules.rst.txt  monolayer.ipynb  monolayer.ipynb.txt  multi_contrast.ipynb  repeating.ipynb  repeating.ipynb.txt  simple_fitting.ipynb.txt  solvation.ipynb.txt  structure.rst.txt  tutorials.rst.txt  usage.rst
_sources/sample/: material_library.rst
_sources/tutorials/: monolayer.ipynb  multi_contrast.ipynb  repeating.ipynb  simple_fitting.ipynb
api/: api.html  data.html  model.html  sample.html
api/assemblies/: gradient_layer.html  multilayer.html  repeating_multilayer.html  surfactant_layer.html
api/elements/: layer.html  layer_area_per_molecule.html  material.html  material_density.html  material_mixture.html  material_solvated.html
docs/: Makefile  assemblies.rst  conf.py  experiment.rst  index.rst  installation.rst  item_library.rst  layer.rst  layer_library.rst  library.rst  make.bat  material_library.rst  materials.rst  materials_options.rst  modules.rst  monolayer.ipynb  multi_contrast.ipynb  repeating.ipynb  sample.rst  simple_fitting.ipynb  solvation.ipynb  tutorials.rst  usage.rst
docs/_static/: d70d2o.ort  repeating_layers.ort
docs/api/: api.rst  assemblies.rst  data.rst  elements.rst  experiment.rst  layer.rst  material.rst  model.rst  sample.rst
docs/experiment/: experiment.rst
docs/sample/: assemblies_library.rst  layer_library.rst  material_library.rst
docs/src/: calculators.rst  conf.py  dictionay.rst  index.rst  installation.rst  usage.rst
docs/tutorials/: material_solvated.ipynb  tutorials.rst  (+6 more)
easyReflectometryLib/: __init__.py  interface.py  main.py  material.py  sample.py
experiment/: experiment.html
model/: model.html
sample/: assemblies_library.html  layer_library.html  material_library.html  sample.html
tests/: package_test.py  test_data.py  test_fitting.py  test_material.py  test_parameter_utils.py  test_project.py  test_topmost_nesting.py  test_utils.py
tutorials/: magnetism.html  magnetism.ipynb  material_solvated.html  material_solvated.ipynb  monolayer.html  monolayer.ipynb  multi_contrast.html  multi_contrast.ipynb  project.html  repeating.html  repeating.ipynb  resolution_functions.html  resolution_functions.ipynb  simple_fitting.html  simple_fitting.ipynb  tutorials.html
vscode-template/: README.rst  settings.json
(+373 files in other folders)
