[build-system]
requires = ["setuptools", "wheel", "poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
source = ['EasyReflectometry']

[tool.github.info]
organization = 'easyScience'
repo = 'EasyReflectometryLib'

[tool.poetry]
name = "EasyReflectometryLib"
version = "0.0.2"
description = "A reflectometry python package built on the EasyScience framework"
authors = ["Andrew R. McCluskey", "Andrew Sazonov", "Simon Ward"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://easyreflectometry.org"
documentation = "https://easyscience.github.io/EasyReflectometryLib/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha"
]
packages = [ { include = "EasyReflectometry" } ]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
easyScienceCore = { git = 'https://github.com/easyScience/easyCore.git', rev = 'pre-release' }
#easyScienceCore = { path = '../easyCore'}
refnx = "^0.1.15"  # Freeze "0.1.15" if "ERROR: Could not build wheels for refnx which use PEP 517 and cannot be installed directly"
refl1d = "^0.8.14"
scipp = "^0.13.0"
orsopy = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
codecov = "^2.1.11"
yapf = "^0.31.0"
toml = "^0.10"
jupyter = "^1.0.0"

[tool.poetry.scripts]
EasyReflectometryLib = "EasyReflectometry.main:main"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{38,39,310,311}
[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11.0-alpha.1: py311
[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows
[testenv]
passenv =
    CI
    GITHUB_ACTIONS
    GITHUB_ACTION
    GITHUB_REF
    GITHUB_REPOSITORY
    GITHUB_HEAD_REF
    GITHUB_RUN_ID
    GITHUB_SHA
    COVERAGE_FILE
deps = coverage
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run pytest --cov --cov-report=xml
"""