[build-system]
requires = ["hatchling<=1.21.0"]  
build-backend = "hatchling.build"

[project]
name = "EasyReflectometryLib"
version = "0.0.2"
description = "A reflectometry python package built on the EasyScience framework."
readme = "README.rst"
authors = [
    {name = "Andrew R. McCluskey", email = "andrew.mccluskey@ess.eu"}, 
    {name = "Andrew Sazonov"}, 
    {name = "Simon Ward"}
]
maintainers = [
    {name = "Andrew R. McCluskey", email = "andrew.mccluskey@ess.eu"}
]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.8,<3.12"
dependencies = [
    "easyScienceCore @ git+https://github.com/easyscience/easycore.git@failed_unit_check",
    "refnx>=0.1.15",
    "refl1d>=0.8.14",
    "scipp==23.08.0",
    "orsopy>=0.0.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=5.2",
    "pytest-cov>=3.0.0",
    "codecov>=2.1.11",
    "yapf>=0.31.0",
    "toml>=0.10",
    "jupyter>=1.0.0",
    "flake8>=6.0.0",
    "jupyterlab",
    "coverage",
    "coveralls",
    "ipykernel",
    "nbsphinx",
    "sphinx_book_theme",
    "sphinx_autodoc_typehints"
]

[project.urls]
homepage = "https://docs.easyreflectometry.org"
documentation = "https://docs.easyreflectometry.org"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source = ['EasyReflectometry']

[tool.github.info]
organization = 'easyScience'
repo = 'EasyReflectometryLib'

[tool.hatch.build.targets.wheel]
packages = ["EasyReflectometry"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{38,39,310,311}
[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows
[testenv]
passenv =
    CI
    GITHUB_ACTIONS
    GITHUB_ACTION
    GITHUB_REF
    GITHUB_REPOSITORY
    GITHUB_HEAD_REF
    GITHUB_RUN_ID
    GITHUB_SHA
    COVERAGE_FILE
deps = coverage
commands =
    pip install -e '.[dev]'
    pytest --cov --cov-report=xml
"""