[build-system]
requires = [
    "hatchling<=1.21.0",
    "setuptools-git-versioning",
]
build-backend = "hatchling.build"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "easyreflectometry"
dynamic = ["version"]
description = "A reflectometry python package built on the EasyScience framework."
readme = "README.md"
authors = [{name = "EasyScience contributors"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha"
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "easyscience>=1.2.0",
    "scipp>=23.12.0",
    "refnx>=0.1.15",
    "refl1d>=0.8.14",
    "orsopy>=0.0.4",
    "pint==0.23", # Only to ensure that unit is reported as dimensionless rather than empty string
    "xhtml2pdf>=0.2.16"
]

[project.optional-dependencies]
dev = [
    "build",
    "codecov>=2.1.11",
    "coverage",
    "coveralls",
    "flake8>=6.0.0",
    "ipykernel",
    "jupyter>=1.0.0",
    "jupyterlab",
    "plopp",
    "pooch",
    "pytest>=5.2",
    "pytest-cov>=3.0.0",
    "ruff",
    "toml>=0.10",
    "yapf>=0.31.0",
]
docs = [
    "myst_parser",
    "nbsphinx",
    "sphinx_autodoc_typehints",
    "sphinx_book_theme",
    "sphinx-copybutton",
    "toml"
]

[project.urls]
homepage = "https://docs.easyreflectometry.org"
documentation = "https://docs.easyreflectometry.org"

[tool.hatch.version]
path = "src/easyreflectometry/__version__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/easyreflectometry"]

[tool.coverage.run]
source = ["src/easyreflectometry"]

[tool.github.info]
organization = 'easyScience'
repo = "easyreflectometry"

[tool.ruff]
line-length = 127
exclude = [
    "docs",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
# allow asserts in test files
"*test_*.py" = ["S101"]

[tool.ruff.lint]
ignore-init-module-imports = true
select = [
    # flake8 settings from existing CI setup
    "E9", "F63", "F7", "F82",
    # Code should be polished to fulfill all cases below
    # https://docs.astral.sh/ruff/rules/
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
#    "UP",
    # flake8-bugbear
#    "B",
    # flake8-simplify
#    "SIM",
    # isort
    "I",
    # flake8-bandit
    "S",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{3.9,3.10,3.11,3.12}
[gh-actions]
python =
        3.9: py39
        3.10: py310
        3.11: py311
        3.12: py312
[gh-actions:env]
PLATFORM =
    ubuntu-latest: linux
    macos-latest: macos
    windows-latest: windows
[testenv]
passenv =
    CI
    GITHUB_ACTIONS
    GITHUB_ACTION
    GITHUB_REF
    GITHUB_REPOSITORY
    GITHUB_HEAD_REF
    GITHUB_RUN_ID
    GITHUB_SHA
    COVERAGE_FILE
deps = coverage
commands =
    pip install -e '.[dev]'
    pytest --cov --cov-report=xml
"""
