[bdist_wheel]
universal = 1

[options]
packages =
    easyreflectometry
    easyreflectometry.calculators
    easyreflectometry.experiment
    easyreflectometry.interfaces
    easyreflectometry.measurement
    easyreflectometry.sample
include_package_data = True

[flake8]
exclude = docs
max-line-length = 88
extend-ignore = F821, E252

[yapf]
based_on_style = pep8
column_limit = 88