[bdist_wheel]
universal = 1

[metadata]
name = EasyReflectometry
version = attr: EasyReflectometry.__version__

[options]
include_package_data = True
install_requires =
    refnx>=0.1.15  # Freeze "0.1.15" if "ERROR: Could not build wheels for refnx which use PEP 517 and cannot be installed directly"
    refl1d>=0.8.14
    scipp>=0.11.1
    orsopy>=0.0.4
    easysciencecore @ git+https://github.com/easyScience/easyCore.git@develop

[options.extras_require]
dev =
    pytest>=5.2
    yapf>=0.31.0
    toml>=0.10
    jupyter>=1.0.0
    coverage[toml]
    coveralls

[flake8]
exclude = docs
max-line-length = 88
extend-ignore = F821, E252

[yapf]
based_on_style = pep8
column_limit = 88